update root file

--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ChatGPT Clone</title>
+    <link
+      rel="shortcut icon"
+      href="https://avatars.githubusercontent.com/u/119056933?s=400&u=cfcface4545674a26c1d923b0100ea061b675141&v=4"
+      type="image/x-icon"
+    />
+
+    <title>Hz AI</title>
   </head>
   <body>
     <div id="root"></div>
